Fix warnings after bump to Java11